launchpad-buildd (122) UNRELEASED; urgency=medium

  * Drop the status_dict XML-RPC method, now that the master uses the
    new-style dict-flavoured status method.
  * Don't add symlinks to the results of livefs builds (LP: #1247461).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 25 Apr 2014 13:59:16 +0100

launchpad-buildd (121) hardy; urgency=medium

  * Retry "apt-get update" on failure after a short delay, as this
    occasionally fails due to racing with an archive pulse.
  * Go back to setting explicit values for LANG, LC_ALL, and LANGUAGE rather
    than unsetting them, since otherwise sudo/pam_env may fill in unwanted
    values from /etc/default/locale.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Jan 2014 13:40:40 +0000

launchpad-buildd (120) hardy; urgency=low

  [ Colin Watson ]
  * Unset LANG and LC_ALL rather than setting them to C, and unset a number
    of other environment variables too (including DISPLAY and TERM), in line
    with Debian buildds.
  * Make the status XML-RPC method a synonym for status_dict.
  * Add a new "livefs" build manager, based on livecd-rootfs/BuildLiveCD
    (LP: #1247461).
  * Remove virtualization check from buildrecipe.  It was a rather futile
    security check as escaping chroots is trivial, and it will fail when the
    PPA builder pool is converted to scalingstack.

  [ Adam Conrad ]
  * update-debian-chroot: Allow arm64-on-x86 builds with qemu-aarch64-static.
  * slave-prep: output current dpkg-dev version for debugging purposes.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 23 Jan 2014 12:30:54 +0000

launchpad-buildd (119) hardy; urgency=low

  * Mount /dev/pts with -o gid=5,mode=620 to avoid needing pt_chown.

 -- Adam Conrad <adconrad@ubuntu.com>  Thu, 10 Oct 2013 08:56:07 -0600

launchpad-buildd (118) hardy; urgency=low

  [ William Grant ]
  * Fix fallback to PACKAGEFAIL of unknown sbuild DEPFAIL conditions
    (LP: #1235038).

  [ Colin Watson ]